improve code according to git copilot suggestions